# service/UsersService.js
@@ -1,62 +1,62 @@
 'use strict';
 
-'use strict';
+// 'use strict';
 
-exports.checkMobile = function(body) {
-  return new Promise(function(resolve, reject) {
-    var examples = {};
+// exports.checkMobile = function(body) {
+//   return new Promise(function(resolve, reject) {
+//     var examples = {};
 
-    var mobileNumber = body.mobile_number; // Assuming mobile number is in the body object
+//     var mobileNumber = body.mobile_number; // Assuming mobile number is in the body object
 
-    switch (true) {
-      // Check if the mobile number is provided
-      case mobileNumber === "":
-        examples['application/json'] = {
-          "message": "Phone number is required",
-          "code": 1000
-        };
-        resolve(examples['application/json']);
-        break;
+//     switch (true) {
+//       // Check if the mobile number is provided
+//       case mobileNumber === "":
+//         examples['application/json'] = {
+//           "message": "Phone number is required",
+//           "code": 1000
+//         };
+//         resolve(examples['application/json']);
+//         break;
 
-      // Validate mobile number format (10 digits)
-      case mobileNumber === "9731037150":
-        examples['application/json'] = {
-          "otpVerification": 0,
-          "code": 2000,
-          "mobile": 1
-        };
-        resolve(examples['application/json']);
-        break;
+//       // Validate mobile number format (10 digits)
+//       case mobileNumber === "9731037150":
+//         examples['application/json'] = {
+//           "otpVerification": 0,
+//           "code": 2000,
+//           "mobile": 1
+//         };
+//         resolve(examples['application/json']);
+//         break;
 
-      // Check if the mobile number exceeds 10 digits
-      case mobileNumber === "83754375331111":
-        examples['application/json'] = {
-          "code": 1000,
-          "message": "mobile_number should not exceed 10"
-        };
-        resolve(examples['application/json']);
-        break;
+//       // Check if the mobile number exceeds 10 digits
+//       case mobileNumber === "83754375331111":
+//         examples['application/json'] = {
+//           "code": 1000,
+//           "message": "mobile_number should not exceed 10"
+//         };
+//         resolve(examples['application/json']);
+//         break;
 
-      // Check if the mobile number field is present
-      case body.mobile_number === undefined:
-        examples['application/json'] = {
-          "message": "mobile_number field is required",
-          "code": 1000
-        };
-        resolve(examples['application/json']);
-        break;
+//       // Check if the mobile number field is present
+//       case body.mobile_number === undefined:
+//         examples['application/json'] = {
+//           "message": "mobile_number field is required",
+//           "code": 1000
+//         };
+//         resolve(examples['application/json']);
+//         break;
 
-      // Default case for invalid mobile number
-      default:
-        examples['application/json'] = {
-          "code": 1000,
-          "message": "Invalid mobile number"
-        };
-        resolve(examples['application/json']);
-        break;
-    }
-  });
-};
+//       // Default case for invalid mobile number
+//       default:
+//         examples['application/json'] = {
+//           "code": 1000,
+//           "message": "Invalid mobile number"
+//         };
+//         resolve(examples['application/json']);
+//         break;
+//     }
+//   });
+// };
 
 
 
@@ -154,7 +154,7 @@ exports.generateOtp = function(body) {
 
 'use strict';
 
-exports.preference = function(body, uuid) {
+exports.preference = function(body) {
   return new Promise(function(resolve, reject) {
     var examples = {};
 
@@ -164,6 +164,15 @@ exports.preference = function(body, uuid) {
         examples['application/json'] = {
           "code": 1000,
           "message": "required field language"
+        };
+        resolve(examples['application/json']);
+        break;
+
+      // Check if the 'uuid' field is present in the request body
+      case !body.hasOwnProperty('uuid'):
+        examples['application/json'] = {
+          "code": 1000,
+          "message": "required field uuid"
         };
         resolve(examples['application/json']);
         break;
@@ -182,6 +191,15 @@ exports.preference = function(body, uuid) {
         examples['application/json'] = {
           "code": 1000,
           "message": "please enter a valid language"
+        };
+        resolve(examples['application/json']);
+        break;
+
+      // Validate if the 'language' field has an accepted value
+      case body.uuid !== 'bdsjfj145645-sdfnsdnf2sdf':
+        examples['application/json'] = {
+          "code": 1000,
+          "message": "please enter a valid uuid"
         };
         resolve(examples['application/json']);
         break;
@@ -229,13 +247,6 @@ exports.token = function(body) {
         examples['application/json'] = {
           code: 1000,
           message: 'required field mpin'
-        };
-        resolve(examples['application/json']);
-        break;
-      case body.user_fcm_token === undefined:
-        examples['application/json'] = {
-          code: 1000,
-          message: 'required field user_fcm_token'
         };
         resolve(examples['application/json']);
         break;
@@ -370,6 +381,7 @@ exports.verifyotp = function(body) {
     }
   });
 };
+'use strict';
 
 /**
  * get account details
@@ -381,20 +393,91 @@ exports.verifyotp = function(body) {
 exports.accountDetails = function(body) {
   return new Promise(function(resolve, reject) {
     var examples = {};
-    examples['application/json'] = {
-  "code" : 2000,
-  "data" : {
-    "accounts" : "[{\"customerId\":\"11111111\",\"customerReferenceNumber\":\"5674267906535678\",\"customerFullName\":\"Sample Kumar\",\"mobileNumber\":\"9999999999\",\"accountId\":\"xxxxxxxxxxxx3984\",\"accountType\":\"CURRENT\",\"accountStatus\":\"ACCOUNT OPEN REGULAR\",\"IFSCCode\":\"JSFB0004534\",\"aeba\":\"Y\"},{\"customerId\":\"2222222\",\"customerReferenceNumber\":\"5674267906535678\",\"customerFullName\":\"Sample Kumar\",\"mobileNumber\":\"9999999999\",\"accountId\":\"xxxxxxxxxxxx3984\",\"accountType\":\"CURRENT\",\"accountStatus\":\"ACCOUNT OPEN REGULAR\",\"IFSCCode\":\"JSFB0004534\",\"aeba\":\"Y\"}]"
-  }
-};
-    if (Object.keys(examples).length > 0) {
-      resolve(examples[Object.keys(examples)[0]]);
-    } else {
-      resolve();
+
+    switch (true) {
+      // Check if the mobile number field is present
+      case !body.hasOwnProperty('mobile_number'):
+        examples['application/json'] = {
+          code: 1000,
+          message: 'required field mobile_number'
+        };
+        resolve(examples['application/json']);
+        break;
+
+      // Check if the mobile number is provided
+      case body.mobile_number === "":
+        examples['application/json'] = {
+          code: 1000,
+          message: 'mobile number is required'
+        };
+        resolve(examples['application/json']);
+        break;
+
+      // Check if the mobile number is less than 10 digits
+      case body.mobile_number === "123456789":
+        examples['application/json'] = {
+          code: 1000,
+          message: 'mobile number should not be less than 10 digits'
+        };
+        resolve(examples['application/json']);
+        break;
+
+      // Validate mobile number format (exactly 10 digits)
+      case body.mobile_number === "9731037150":
+        examples['application/json'] = {
+          "code": 2000,
+          "data": {
+            "accounts": [
+              {
+                "customerId": "11111111",
+                "customerReferenceNumber": "5674267906535678",
+                "customerFullName": "Sample Kumar",
+                "mobileNumber": "9999999999",
+                "accountId": "xxxxxxxxxxxx3984",
+                "accountType": "CURRENT",
+                "accountStatus": "ACCOUNT OPEN REGULAR",
+                "IFSCCode": "JSFB0004534",
+                "aeba": "Y"
+              },
+              {
+                "customerId": "11111111",
+                "customerReferenceNumber": "5674267906535678",
+                "customerFullName": "Sample Kumar",
+                "mobileNumber": "9999999999",
+                "accountId": "xxxxxxxxxxxx3984",
+                "accountType": "CURRENT",
+                "accountStatus": "ACCOUNT OPEN REGULAR",
+                "IFSCCode": "JSFB0004534",
+                "aeba": "Y"
+              }
+            ]
+          }
+        };
+        resolve(examples['application/json']);
+        break;
+
+      // Check if the mobile number exceeds 10 digits
+      case body.mobile_number === "12345678901":
+        examples['application/json'] = {
+          code: 1000,
+          message: 'mobile_number maximum 10 number'
+        };
+        resolve(examples['application/json']);
+        break;
+
+      // Default case for invalid mobile number
+      default:
+        examples['application/json'] = {
+          code: 1000,
+          message: 'Invalid mobile number'
+        };
+        resolve(examples['application/json']);
+        break;
     }
   });
-}
+};
 
+'use strict';
 /**
  * get static qrcode
  *  
